--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.1.15",
+    "@prisma/client": "^5.11.0",
+    "axios": "^1.6.8",
     "next": "14.1.3",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
     "react-textarea-autosize": "^8.5.3"
